--- a/gamedev/public_html/profile.css
+++ b/gamedev/public_html/profile.css
@@ -189,3 +189,21 @@ footer {
 #guideButton:hover {
     background-color: #b08d2b;
 }
+
+#bugReportButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #37d47e;
+    color: #fff;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+}
+
+#bugReportButton:hover {
+    background-color: #228d53;
+}
